Изменение Ярлыка приложения
Добавлен ярлык на приложение "USN"

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Калькулятор УСН">
+<link rel="apple-touch-icon" href="https://placehold.co/192x192/4F46E5/FFFFFF?text=USN&font=bold">
 <title>ИП УСН 6% · Lite</title>
 <style>
 :root{ --bg:#0b0c10; --card:#14151a; --text:#e6e6e6; --muted:#9aa0a6; --accent:#4da3ff; --danger:#ff5a5a; }
